--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -25,9 +25,9 @@ jobs:
           - goos: windows
             goarch: 386
           - goos: darwin
-            goarch: arm64
+            goarch: 386
           - goos: darwin
-            goarch: amd64
+            goarch: arm
       fail-fast: true
     steps:
       - uses: actions/checkout@master
