--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         # build and publish in parallel: linux/386, linux/amd64, windows/386, windows/amd64, darwin/amd64, darwin/arm64
-        goos: [linux, windows, darwin]
+        goos: [linux, windows]
         goarch: ["386", amd64, arm, arm64]
         exclude:
           - goos: windows
@@ -24,10 +24,6 @@ jobs:
             goarch: arm64
           - goos: windows
             goarch: 386
-          - goos: darwin
-            goarch: 386
-          - goos: darwin
-            goarch: arm
       fail-fast: true
     steps:
       - uses: actions/checkout@master
